--- a/Areas/Identity/Pages/Account/Register1.cshtml
+++ b/Areas/Identity/Pages/Account/Register1.cshtml
@@ -174,7 +174,7 @@
             <p class="auth-subtitle">Join our platform as a service provider</p>
         </div>
 
-        <form id="registerForm" asp-route-returnUrl="/Workers/Create" method="post">
+        <form id="registerForm" asp-route-returnUrl="/UserAddress/Create" method="post">
             <div asp-validation-summary="ModelOnly" class="validation-message">
                 <i class="ri-error-warning-line"></i>
             </div>
