--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Business">
+                    <a class="dropdown-item" asp-page="/Workers/Business">
                         <i class="fas fa-briefcase"></i> Business
                     </a>
                 </li>
