--- a/Views/Workers/Create.cshtml
+++ b/Views/Workers/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Worker
 
+<!--If the menu dropdown doesn't work copy paste the lines below this to the html pages that doesnt work with dropdown-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 @{
     ViewData["Title"] = "Create Worker Profile";
 }
