Updated the timeslot/edit and index pages UI and Logic

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -27,8 +27,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Business">
-                        <i class="fas fa-briefcase"></i> Business
+                    <a class="dropdown-item" asp-controller="TimeSlots" asp-action="Index">
+                        <i class="fas fa-calendar"></i> Bookings
                     </a>
                 </li>
             }
