--- a/Views/Paypal/Index.cshtml
+++ b/Views/Paypal/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Payment";
 }
 
+<!--If the menu dropdown doesn't work copy paste the lines below this to the html pages that doesnt work with dropdown-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
 <style>
     .payment-page {
         min-height: 100vh;
