--- a/Views/Paypal/Success.cshtml
+++ b/Views/Paypal/Success.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿<!--If the menu dropdown doesn't work copy paste the lines below this to the html pages that doesnt work with dropdown-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <h1>Payment Success!</h1>
 <h2>Thank you for selecting QuickFix</h2>
