--- a/Views/UserAddress/Create.cshtml
+++ b/Views/UserAddress/Create.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
+
+
 <h1>Create</h1>
 
 <h4>UserAddress</h4>
@@ -17,27 +19,27 @@
                 <input asp-for="UserId" type="hidden" />
             </div> 
             <div class="form-group">
-                <label asp-for="StreetNumberName" class="control-label"></label>
+                <label asp-for="StreetNumberName" class="control-label">Street Name and Number</label>
                 <input asp-for="StreetNumberName" class="form-control" />
                 <span asp-validation-for="StreetNumberName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PostalCode" class="control-label"></label>
+                <label asp-for="PostalCode" class="control-label"> Postal Code </label>
                 <input asp-for="PostalCode" class="form-control" />
                 <span asp-validation-for="PostalCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
+                <label asp-for="City" class="control-label">City </label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Province" class="control-label"></label>
+                <label asp-for="Province" class="control-label">Province</label>
                 <input asp-for="Province" class="form-control" />
                 <span asp-validation-for="Province" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
+                <label asp-for="Country" class="control-label">Country</label>
                 <input asp-for="Country" class="form-control" />
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
