--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "QuickFix - Home Repair Services";
 }
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- External CSS -->
@@ -22,23 +20,21 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Work+Sans:300,400,700" rel="stylesheet">
 
     <!-- CSS -->
-
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- Modernizr JS for IE8 support of HTML5 elements and media queries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-
-
 </head>
+
 <body data-spy="scroll" data-target="#navbar" class="static-layout">
-
-
     <div class="jumbotron d-flex align-items-center">
         <div class="container text-center">
-           <!-- <h1 class="display-1 mb-4">QU<br>FX</h1> -->
-            <h1 style="border: none">   <img class="display-1 mb-4" src="img/Logo.png" alt=""> </h1>
+            <h1 style="border: none">
+                <img class="display-1 mb-4" src="img/Logo.png" alt="QuickFix Logo">
+            </h1>
         </div>
+        <!-- Decorative elements remain the same -->
         <div class="rectangle-1"></div>
         <div class="rectangle-2"></div>
         <div class="rectangle-transparent-1"></div>
@@ -60,89 +56,74 @@
         </div>
     </div>
 
-    <!-- Move this section below the jumbotron -->
     <div id="features" class="bg-white">
         <div class="container">
             <div class="section-content">
-                <!-- Section Title -->
-                <div class="title-wrap mb-5 fade-up " >
+                <div class="title-wrap mb-5 fade-up">
                     <h2 class="section-title">
-                       A website for all your work to be done
+                        Simplifying Home Repairs Across Canada
                     </h2>
-                    <p class="section-sub-title">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. <br> pharetra augue. Donec id elit non mi.</p>
+                    <p class="section-sub-title">Connect with skilled professionals effortlessly. Transparent pricing. Direct communication.</p>
                 </div>
-                <!-- End of Section Title -->
                 <div class="row">
-                    <!-- Features Holder-->
                     <div class="col-md-10 offset-md-1 features-holder">
                         <div class="row">
-                            <!-- Features Item -->
                             <div class="col-md-4 col-sm-12 text-center mt-4">
-                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-cog fs-40"></i>
                                     </div>
                                     <h4>Easy to Use</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <p>Intuitive platform design that simplifies booking home repair services in just a few clicks.</p>
                                 </div>
-                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-frame-contract fs-40"></i>
                                     </div>
-                                    <h4>Prodessional Skilled Workers</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <h4>Professional Skilled Workers</h4>
+                                    <p>Verified and skilled professionals across multiple service categories, ensuring quality work.</p>
                                 </div>
                             </div>
-                            <!-- End of Feature Item -->
-                            <!-- Features Item -->
                             <div class="col-md-4 col-sm-12 text-center">
-                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-bubble fs-40"></i>
                                     </div>
                                     <h4>Full Support</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <p>Comprehensive customer support and direct communication channels with service providers.</p>
                                 </div>
-                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-magic-wand fs-40"></i>
                                     </div>
                                     <h4>25 Skilled Services</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <p>Wide range of home repair services including plumbing, electrical, and technical maintenance.</p>
                                 </div>
                             </div>
-                            <!-- End of Feature Item -->
-                            <!-- Features Item -->
                             <div class="col-md-4 col-sm-12 text-center mt-4">
-                                <div class="shadow rounded feature-item p-4 mb-4 fade-up" >
+                                <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-clock fs-40"></i>
                                     </div>
-                                    <h4>Ontime Appointments</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <h4>On-time Appointments</h4>
+                                    <p>Real-time availability tracking and flexible scheduling to suit your convenience.</p>
                                 </div>
                                 <div class="shadow rounded feature-item p-4 mb-4 fade-up">
                                     <div class="my-4">
                                         <i class="lnr lnr-thumbs-up fs-40"></i>
                                     </div>
-                                    <h4>Best Price</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+                                    <h4>Transparent Pricing</h4>
+                                    <p>Clear, upfront pricing with no hidden fees. Know exact costs before booking.</p>
                                 </div>
                             </div>
-                            <!-- End of Feature Item -->
                         </div>
                     </div>
-                    <!-- End of Features Holder-->
-
-                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
 
-    
-
-    <!-- External JS -->
+    <!-- External JS scripts remain the same as in the original file -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <script src="vendor/bootstrap/popper.min.js"></script>
     <script src="vendor/bootstrap/bootstrap.min.js"></script>
